create list of reipes, add 2 more recipes

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Cheesecake</h1>
+        <img src="../images/image-placeholder.svg" width="300" height="300">
     </body>
 </html>
