--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pasta Recipe /title>
+        <title>Pasta Recipe </title>
     </head>
+    <body>
+        <h1>Pasta</h1>
+        <img src="../images/image-placeholder.svg" width="300" height="300">
+    </body>
 </html>
