--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
         <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <!-- <h1>Odin Recipes</h1>
         <a href="recipes/pizza.html">Pizza</a>
         <a href="recipes/pasta.html">Pasta</a>
-        <a href="recipes/cheesecake.html">Cheesecake</a>
+        <a href="recipes/cheesecake.html">Cheesecake</a> -->
+        <ul>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/pasta.html">Pasta</a></li>
+            <li><a href="recipes/sushi.html">Sushi</a></li>
+            <li><a href="recipes/pumpkin-pie.html">Pumpkin Pie</a></li>
+            <li><a href="recipes/cheesecake.html">Cheesecake</a></li>
+        </ul>
     </body>
 </html>
