--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Pizza</h1>
+        <img src="../images/image-placeholder.svg" width="300" height="300">
     </body>
 </html>
